# search_engine

./: CMakeLists.txt  README.md
config/: answers.json  requests.json
include/: converter_json.h  inverted_index.h  search_server.h
resources/: file005.txt
src/: CMakeLists.txt  converter_json.cpp  inverted_index.cpp  main.cpp  search_server.cpp
tests/: CMakeLists.txt  inverted_index_tests.cpp  search_server_tests.cpp
